<resources>
    <string name="app_name">Notifiyr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cc_code" />
    <string name="enterstr">enter</string>
    <string name="see_cc_codes">see_cc_codes</string>
    <string name="your_cc_codes">Your CC codes</string>
    <string name="cccode_res">cccode</string>
    <string name="id_res">id</string>
    <string name="update">update</string>
    <string name="cc_code_val">cc_code_val</string>
    <string name="delete">delete</string>
    <string name="noti">a content creator wants you to know someting</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">line_3</string>
    <string name="text3">Text3</string>
    <string name="text2">Text2</string>
    <string name="text1">text1</string>

</resources>