<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content"
    android:id="@+id/carditem">

    <RelativeLayout
        android:background="@drawable/rounded_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/noti"
            android:src="@drawable/ic_add_alert_black_24dp" />

        <TextView
            android:id="@+id/note_text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_view"
            android:text="@string/line_1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/note_text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_text_view_1"
            android:layout_toEndOf="@id/image_view"
            android:text="@string/line_2" />

        <TextView
            android:id="@+id/note_text_View_3"
            android:visibility = "gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/line_3"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>